unpackaged/main/default/objects/litify_pm__Filter_View__c/litify_pm__Filter_View__c.object-meta.xml
<CustomObject>
    <label>Filter View</label>
    <nameField>
        <label>Filter View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filter Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>