unpackaged/main/default/objects/litify_pm__Filter_View__c/fields/litify_pm__Default_Sort_Options__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Default_Sort_Options__c</fullName>
    <label>Default Sort Options</label>
    <length>100</length>
    <type>Text</type>
</CustomField>