unpackaged/main/default/objects/litify_pm__Filter_View__c/fields/litify_pm__Filter_JSON__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Filter_JSON__c</fullName>
    <label>Filter JSON</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>