unpackaged/main/default/objects/litify_pm__Filter_View__c/fields/litify_pm__Public_Filter__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Public_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Public Filter</label>
    <type>Checkbox</type>
</CustomField>